--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">SplashScreen</string>
 
-    <string name="hello_world">Hello world!</string>
+    <string name="search_restaurant">Search for your favourite restaurant</string>
+    <string name="select_food">Select tour favourite food</string>
+    <string name="pay">Pay online or cash on delivery</string>
+    <string name="delivery">Food gets prepared and dekivered at your doorstep</string>
     <string name="action_settings">Settings</string>
+    <string name="nav_drawer">Navigation Drawer</string>
+    <string name="call_support">Call Support</string>
 </resources>
